--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class = "for-bg">
         <div class="half-width-01">
             <h1> Welcome to the Portfolio of</h1>
             <h1> <span class = "highlight-header"> Yeamin Adib</span></h1>
             <h3> Junior Web Developer </h3>
             <p> Hey I am Yeamin Adib, Junior Developer Working to develop my Skillset in order to flourish my career. My Objective is to learn Coding from the core and became a Professional Web Developer. I have a dream to settle myself in Web Technoligies in Canada!</p>  
-        
+            <a class = 'btn-link' href="https://www.linkedin.com/in/yeaminadib/" target="_blank">Hire Me!</a>
         </div>
         <div class = 'half-width-01'>
             <img src="images/image-1.png" alt="">
