--- a/index.html
+++ b/index.html
@@ -17,6 +17,34 @@
             <img src="images/image-1.png" alt="">
         </div>
     </section>
+    <section class = "hire-me-info">
+        <div class ="half-width-01">
+            <img src="images/image-2.png" >
+        </div>
+        <div class = "half-width-01">
+            <h2> Connect with <span class = "highlight-header"> Yeamin Adib</span></h2>
+            <p> Let me Handle your business perfectly and efficiently.! You can connect with me, via Facebook and other
+                social media platforms.! Here I am giving my url to connect with me!
+            </p>
+            <a class="btn-link" href="https://facebook.com/yeamin.adib" target="_blank"> Connect with Me</a>
+        </div>
+    </section>
+    <center> <h2> Experiences</h2></center>
+    <section  class ="experience-info">
+        <div id = "sr-dev" class="half-width-01">
+            <h2> Full Stack <span class = 'highlight-header-2'>Web Developer</span></h2>
+            <h3> 2021 - Present | Google </h3>
+            <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id = "jr-dev" class = "half-width-01">
+            <h2>Junior <span class="highlight-header-2"> Web Developer </span></h2>
+            <h3> 2020 - 2021 | Programming Hero </h3>
+            <p> They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
 
+    </section>
+    <footer>
+        All Rights are Reserved by Yeamin Adib | Project by Programmin Hero 
+    </footer>
 </body>
 </html>
